[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project_name"
dynamic = ["version"]  # Mark version as dynamic
description = " "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymavlink",
    "mcap",
    "numpy",
    "scipy",
    "astropy",
    "colorama",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
    "types-setuptools",
    "nuitka",
]

# Automated pytest parallel execution configuration
[tool.pytest.ini_options]
addopts = "-n auto"
testpaths = ["test"]

[tool.pylint.MAIN]
load-plugins = ["pylint_pydantic"]

[tool.pylint.format]
max-line-length = 120

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Enable the 'Q' (flake8-quotes) rules
select = ["E", "F", "Q", "I"]
# ignore unused variable
ignore = ["F841"]
flake8-quotes.inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"
